stateDiagram-v2
    [*] --> Submitted
    
    Submitted --> Analyzing : student triggers analysis
    Analyzing --> Review : errors detected & stored
    Review --> Completed : student resolves all errors OR failed all 3 attempts
    
    Analyzing --> Submitted : analysis flags grammar error
    
    style Submitted fill:#e1f5ff,stroke:#01579b,stroke-width:2px,color:#000
    style Analyzing fill:#fff9c4,stroke:#f57f17,stroke-width:2px,color:#000
    style Review fill:#ffe0b2,stroke:#e65100,stroke-width:2px,color:#000
    style Completed fill:#c8e6c9,stroke:#1b5e20,stroke-width:2px,color:#000